src/objects/saMessage__c.object
<CustomObject>
    <fields>
        <fullName>BranchCode__c</fullName>
        <label>発信元支店</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountReply__c</fullName>
        <label>CountReply</label>
        <summaryFilterItems>
            <field>saMessageDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>READ, DONE</value>
        </summaryFilterItems>
        <summaryForeignKey>saMessageDetail__c.saMessage__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountShared__c</fullName>
        <label>CountShared</label>
        <summaryFilterItems>
            <field>saMessageDetail__c.Type__c</field>
            <operation>equals</operation>
            <value>SHARED</value>
        </summaryFilterItems>
        <summaryForeignKey>saMessageDetail__c.saMessage__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DeadlineDateFormula__c</fullName>
        <formula>Datevalue(DeadlineDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeadlineDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeadlineDatetime__c</fullName>
        <label>締切時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>詳細</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsEvolva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEvolva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>非公開</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <formula>AND(
OR( ISBLANK(TEXT(Status__c)), TEXT(Status__c) == &apos;Saved&apos;),
PublishedDatetime__c &lt;= NOW()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>公開済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuerLabel__c</fullName>
        <label>発信元</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacySetting__c</fullName>
        <label>PrivacySetting</label>
        <picklist>
            <picklistValues>
                <fullName>PUBLIC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PRIVATE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PublishedDateFormula__c</fullName>
        <formula>Datevalue(PublishedDatetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PublishedDateFormula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublishedDatetime__c</fullName>
        <label>公開開始時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PushNotificationResendCountFormula__c</fullName>
        <description>Replace NULL by 0 in PushNotificationResendCount__c</description>
        <formula>PushNotificationResendCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>リマインド通知回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationResendCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>リマインド通知回数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PushNotificationStatus__c</fullName>
        <label>PushNotificationStatus</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionalOfficeCode__c</fullName>
        <label>発信元支社</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>TemporarySaved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnicalDeadlineDate__c</fullName>
        <label>締切日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalDeadlineTime__c</fullName>
        <label>締切時間</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TechnicalPublishedDate__c</fullName>
        <label>公開開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalPublishedTime__c</fullName>
        <label>公開開始時間</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>MESSAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TASK</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>saMessage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Title__c</columns>
        <columns>IsEvolva__c</columns>
        <columns>IsPublished__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MSG-{00000000}</displayFormat>
        <label>saMessage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>IndividualUserFromAdmin__c</fullName>
        <label>IndividualUserFromAdmin</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>OtherAdmin__c</fullName>
        <label>OtherAdmin</label>
    </sharingReasons>
</CustomObject>